--- a/Webpage 1st/style.css
+++ b/Webpage 1st/style.css
@@ -1,20 +1,36 @@
+h1 {
+    margin-left : 3rem;
+}
 li {
     list-style : none;
+    margin-left : 2rem;
+    margin-right : 2rem;
+}
+.navbar > nav {
+    display:flex;
+    justify-content: space-between;
+}
+ul {
+    display : flex;
 }
 img[src = "images/lab.jpg"] {
-    height:800px;
-    width: 1400px;
+    height:100vh;
+    width: 95vw;
+    margin-left : 2vw;
+    margin-right : 2vw;
+}
+.skills {
+    display: flex;
+}
+.skills>div {
+    text-align : center;
+    margin-top : 1rem;
 }
 .footer{
     height: 80px;
     background-color: black;
     color: white;
-}
-.navbar>nav {
-    display: flex;
-}
-ul {
-    display : flex;
+    text-align : center;
 }
 .footer>p{
     font-size: 25px;
